# Rail

./: .gitignore  CMakeLists.txt  README.md  exampleRun.txt  line_description.txt  line_description_1.txt  main.cpp  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt
Line/: RailLine.cpp  RailLine.h
ProvaLoadTimeTable/ProvaLoadTimeTable/: Rail.cpp  Rail.h
Rail_Class/: Rail.cpp  Rail.h  coutLine.cpp  simulate.cpp
Station/: Station.cpp
Station/Station/: Station.cpp  Station.h
Train/: Train.cpp  Train.h
Train/Train/: Train.cpp  Train.h
